# react-native-app-push-update

./: AppPushUpdate.podspec  CONTRIBUTING.md  LICENSE  README.md  RNAppPushUpdate.podspec  package.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  bspatch.c  bspatch.h  native-lib.cc
android/src/main/java/com/apppushupdate/: AppPushUpdateModule.kt  AppPushUpdatePackage.kt  NativeBridge.kt  RNAppPushUpdate.kt  RNAppPushUpdateFirebaseService.kt
android/src/main/res/layout/: update_header.xml
android/src/main/res/values/: strings.xml
example/: app.json  metro.config.cjs  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle  google-services.json
example/android/app/src/main/java/apppushupdate/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: AppDelegate.m  Podfile
example/ios/AppPushUpdateExample/: AppDelegate.m  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/AppPushUpdateExample.xcodeproj/: project.pbxproj
example/ios/AppPushUpdateExample.xcodeproj/xcshareddata/xcschemes/: AppPushUpdateExample.xcscheme
example/ios/AppPushUpdateExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: AppPushUpdate.h  AppPushUpdate.mm  RNAppPushUpdate.h  RNAppPushUpdate.m  RNAppPushUpdate.swift  RNAppPushUpdateInfo.plist
src/: NativeAppPushUpdate.ts  index.ts  index.tsx
